syntax = "proto3";

package sl;

import "sl_mpeg_ts.proto";
import "sl_remuxer_model.proto";

service SLGraphServiceProto
{
    rpc create_graph(SLGraphProto) returns (SLGraphProto) {}
    rpc get_graph_list(SLEmptyProto) returns (SLGraphListProto) {}
    rpc delete_graph(SLGraphProto) returns (SLEmptyProto) {}

    // encoder & decoder
    rpc get_graph_input_device_list(SLGraphProto) returns (SLDeviceListProto) {}
    rpc get_graph_output_device_list(SLGraphProto) returns (SLDeviceListProto) {}

    rpc add_input_device_to_graph(SLGraphDeviceProto) returns (SLDeviceProto) {}
    rpc delete_input_device_from_graph(SLGraphDeviceProto) returns (SLEmptyProto) {}

    rpc add_output_device_to_graph(SLGraphDeviceProto) returns (SLDeviceProto) {}
    rpc delete_output_device_from_graph(SLGraphDeviceProto) returns (SLEmptyProto) {}
    rpc set_output_device_settings(SLGraphDeviceProto) returns (SLDeviceProto) {}

    rpc get_input_program_list(SLGraphDeviceProto) returns (SLInputProgramListProto) {}
    rpc set_input_program_settings(SLGraphInputProgramProto) returns (SLInputProgramProto) {}

    rpc clone_input_program(SLGraphInputProgramProto) returns (SLInputProgramProto) {}

    rpc add_device_to_program(SLGraphProgramDeviceProto) returns (SLOutputProgramProto) {}
    rpc delete_device_from_program(SLGraphProgramDeviceProto) returns (SLEmptyProto) {}
    rpc get_output_program_list_from_program(SLGraphInputProgramProto) returns (SLOutputProgramListProto) {}
    rpc set_output_program_settings(SLGraphOutputProgramProto) returns (SLEmptyProto) {}

    rpc add_encoder_to_program(SLGraphProgramEncoderProto) returns (SLEncoderProto) {}
    rpc delete_encoder_from_program(SLGraphProgramEncoderProto) returns (SLEmptyProto) {}
    rpc get_encoder_list_from_program(SLGraphInputProgramProto) returns (SLEncoderListProto) {}
    rpc set_encoder_settings(SLGraphEncoderProto) returns (SLEmptyProto) {}

    rpc add_device_to_encoder(SLGraphEncoderDeviceProto) returns (SLOutputProgramProto) {}
    rpc delete_device_from_encoder(SLGraphEncoderDeviceProto) returns (SLEmptyProto) {}
    rpc get_output_program_list_from_encoder(SLGraphEncoderProto) returns (SLOutputProgramListProto) {}

    rpc get_input_device_list(SLEmptyProto) returns (SLDeviceListProto) {}
    rpc get_output_device_list(SLEmptyProto) returns (SLDeviceListProto) {}

    rpc start_graph(SLGraphProto) returns (SLEmptyProto) {}
    rpc stop_graph(SLGraphProto) returns (SLEmptyProto) {}

    rpc start_parsing(SLGraphProto) returns (SLEmptyProto) {}
    rpc is_parsing_ready(SLGraphProto) returns (SLParsingStateProto) {}
    rpc stop_parsing(SLGraphProto) returns (SLEmptyProto) {}

    rpc get_device_statistics(SLGraphDeviceProto) returns (SLStatisticsProto) {}
    rpc get_encoder_statistics(SLGraphEncoderProto) returns (SLStatisticsProto) {}

    rpc get_affinity_mask(SLGraphProto) returns (SLAffinityMaskProto) {}
    rpc set_affinity_mask(SLGraphAffinityMaskProto) returns (SLAffinityMaskProto) {}

    rpc get_graph_log(SLGraphProto) returns (SLLogProto) {}
    rpc clear_log(SLGraphProto) returns (SLEmptyProto) {}

    rpc get_encoder_support(SLEmptyProto) returns (SLEncoderSupportProto) {}

    // remuxer
    rpc get_remuxer_input_info(SLGraphDeviceProto) returns (SLInputInfoProto) {}

    rpc get_remuxer_reserve(SLGraphProto) returns (SLReserveListProto) {}
    rpc set_remuxer_reserve(SLGraphReserveProto) returns (SLEmptyProto) {}

    // gochs
    rpc get_remuxer_gochs(SLGraphProto) returns (SLReserveListProto) {}
    rpc set_remuxer_gochs(SLGraphReserveProto) returns (SLEmptyProto) {}
    //

    rpc get_remuxer_model(SLGraphProto) returns (SLModelProto) {}
    rpc set_remuxer_model(SLGraphRemuxerModelProto) returns (SLModelProto) {}

    rpc get_remuxer_statistics(SLGraphProto) returns (SLStatisticsProto) {}
}

message SLEmptyProto
{
}

enum SLGraphStateProto
{
    sl_graph_runing = 0;
    sl_graph_stoped = 1;
    sl_graph_parsing = 2;
    sl_graph_creating = 3;
    sl_graph_deleting = 4;
    sl_graph_error = 5;
    sl_graph_stored = 6;
}

enum SLGraphTypeProto
{
    sl_encoder_decoder  = 0;
    sl_remuxer          = 1;
}

message SLGraphProto
{
    string name                 = 1;
    string guid                 = 2;
    SLGraphStateProto state  = 3;
    string host                 = 4;
    int32 port                  = 5;
    SLGraphTypeProto type    = 6;
}

message SLGraphListProto
{
    repeated SLGraphProto list = 1;
}

message SLConfiguratorInfoProto
{
    string dll_name = 1;
    string class_name = 2;
}

message SLLLDeviceInfoProto
{
    string template = 1;

    enum SLLLDeviceTypeProto
    {
        sl_unknown = 0;
    }

    SLLLDeviceTypeProto type = 2;
}

message SLDeviceProto
{
    string display_name = 1;

    enum SLDeviceTypeProto
    {
        sl_sdi_device_type = 0;
        sl_mpeg_ts_device_type = 1;
        sl_es_device_type = 2;
    }

    SLDeviceTypeProto type = 2;

    repeated SLLLDeviceInfoProto ll_device_info = 3;
    string settings = 4;
    SLConfiguratorInfoProto configurator_info = 5;

    string guid = 6;
}

message SLDeviceListProto
{
    repeated SLDeviceProto list = 1;
}

enum SLStreamTypeProto
{
    video_stream        = 0;
    audio_stream        = 1;
    teletext_stream     = 2;
    subtuitle_stream    = 3;
    scte104_stream      = 4;
    scte35_stream       = 5;
    mpeg_ts_stream      = 6;

    unknown_stream      = 0xFF;
}

message SLStreamProto
{
    string guid = 1;
    string lang = 2;
    bool    use = 3;

    SLStreamTypeProto type = 4;

    //for es stream
    uint32 stream_id = 5;
    uint32 stream_pid = 6;

    string format = 7;

    uint32 out_stream_pid = 8;
}

message SLInputProgramProto
{
    string guid = 1;
    string name = 2;
    uint32 number = 3;

    repeated SLStreamProto streams = 4;
    string clone = 5;
}

message SLInputProgramListProto
{
    repeated SLInputProgramProto list = 1;
}

message SLGraphDeviceProto
{
    SLGraphProto graph = 1;
    SLDeviceProto device = 2;
}

message SLParsingStateProto
{
    bool is_parsing = 1;
}

enum SLVideoEncoderTypeProto
{
    sl_mc_mpeg_encoder      = 0;
    sl_intel_mpeg_encoder   = 1;
    sl_mc_avc_encoder       = 2;
    sl_intel_avc_encoder    = 3;
    sl_nvidia_avc_encoder   = 4;
    sl_mc_hevc_encoder      = 5;
    sl_intel_hevc_encoder   = 6;
    sl_nvidia_hevc_encoder  = 7;
}

enum SLAudioEncoderTypeProto
{
    sl_mc_mpeg1_encoder = 0;
    sl_mc_aac_encoder   = 1;
    sl_mc_ac3_encoder   = 2;
}

message SLEncoderProto
{
    string guid = 1;
    string name = 2;

    SLVideoEncoderTypeProto video = 3;
    SLAudioEncoderTypeProto audio = 4;

    string settings = 5;
}

message SLEncoderListProto
{
    repeated SLEncoderProto list = 1;
}

message SLGraphProgramEncoderProto
{
    SLGraphProto          graph           = 1;
    SLInputProgramProto  input_program   = 2;
    SLEncoderProto        encoder         = 3;
}

message SLOutputProgramProto
{
    string guid             = 1;
    string name             = 2;
    uint32 number           = 3;
    uint32 pid_pcr          = 4;
    uint32 program_id       = 5;
    string provider_name    = 6;

    SLDeviceProto device = 7;
    repeated SLStreamProto streams = 8;
}

message SLOutputProgramListProto
{
    repeated SLOutputProgramProto list = 1;
}

message SLGraphProgramDeviceProto
{
    SLGraphProto          graph           = 1;
    SLInputProgramProto  input_program   = 2;
    SLDeviceProto         device          = 3;
}

message SLGraphEncoderDeviceProto
{
    SLGraphProto          graph       = 1;
    SLEncoderProto        encoder     = 2;
    SLDeviceProto         device      = 3;
}

message SLGraphEncoderProto
{
    SLGraphProto          graph       = 1;
    SLEncoderProto        encoder     = 2;
}

message SLGraphInputProgramProto
{
    SLGraphProto          graph           = 1;
    SLInputProgramProto  input_program   = 2;
}

message SLGraphOutputProgramProto
{
    SLGraphProto          graph           = 1;
    SLOutputProgramProto output_program  = 2;
}

message SLEnumProto
{
    string name     = 1;
    string value    = 2;
}

message SLParamProto
{
    string id       = 1;
    string name     = 2;
    string value    = 3;
    string desc     = 4;

    repeated SLEnumProto enums = 5;
}

message SLStatisticProto
{
    string name = 1;
    repeated SLParamProto params = 2;
}

message SLStatisticsProto
{
    repeated SLStatisticProto list = 1;
}

message SLSettingProto
{
    string name = 1;
    repeated SLParamProto params = 2;
}

message SLSettingsProto
{
    repeated SLSettingProto list = 1;
}

message SLAffinityMaskProto
{
    repeated bool affinity = 1;
}

message SLGraphAffinityMaskProto
{
    SLGraphProto graph = 1;
    SLAffinityMaskProto affinity = 2;
}

message SLLogProto
{
    repeated string list = 1;
}

message SLGraphLogProto
{
    SLGraphProto graph = 1;
    SLLogProto log = 2;
}

message SLEncoderSupportProto
{
    repeated SLVideoEncoderTypeProto video = 1;
    repeated SLAudioEncoderTypeProto audio = 2;
}

////////////////////////////////////////////////////////////////////////////////
message SLInputInfoProto
{
    SLInputPatProto      pat = 1;

    SLCatProto            cat = 2;
    SLTotProto            tot = 3;
    SLTdtProto            tdt = 4;

    SLInputSdtProto      sdt = 5;
    SLInputNitProto      nit = 7;
    SLInputEitProto      eit = 8;
}

message SLReserveProto
{
    enum SLStateProto
    {
        sl_normal = 0;
        sl_reserve = 1;
        sl_gochs = 2;
    }

    SLStateProto  state       = 1;
    uint32          dst_pid     = 2;
    uint32          dst_number  = 3;
}

message SLReserveListProto
{
    repeated SLReserveProto list = 1;
}

message SLGraphReserveProto
{
    SLGraphProto      graph   = 1;
    SLReserveProto    reserve = 2;
}

message SLGraphReserveListProto
{
    SLGraphProto          graph   = 1;
    SLReserveListProto   list    = 2;
}

message SLGraphRemuxerModelProto
{
    SLGraphProto          graph   = 1;
    SLModelProto          model   = 2;
}
