syntax = "proto3";

package sl;

enum SLReserveStateProto
{
    sl_normal = 0;
    sl_reserve = 1;
    sl_gochs = 2;
}

message SLPairModel
{
    uint32 first    = 1;
    uint32 second   = 2;
}

enum SLTableStateProto
{
    e_none      = 0;
    e_generate  = 1;
    e_passthru  = 2;
}

////////////////////////////////////////////////////////////////////////////////
// PAT PMT
message SLPmtModelProto
{
    SLPairModel        src = 1;               // src pid, number
    SLPairModel        dst = 2;               // dst pid, number
    SLReserveStateProto  reserve = 3;
    SLReserveStateProto  status = 4;

    map<uint32, uint32>     streams = 5;        // src pid, dst pid
    bool                    auto_to_reserve = 6;
}

message SLPmtsModelProto
{
    repeated SLPmtModelProto pmts = 1;
}

message SLPatModelProto
{
    map<string, SLPmtsModelProto> inputs = 1;
}
////////////////////////////////////////////////////////////////////////////////

////////////////////////////////////////////////////////////////////////////////
// SDT
message SLSdtsSdsModel
{
    repeated SLPairModel src_dst = 1;         // src number, dst number
}

message SLSdtModelProto
{
    map<string, SLSdtsSdsModel>   actual = 1;
    map<string, SLSdtsSdsModel>   other = 2;
}
////////////////////////////////////////////////////////////////////////////////

////////////////////////////////////////////////////////////////////////////////
// NIT
message SLNitsTsModelProto
{
    repeated SLPairModel src = 1; // src ts_id, src on_id
    repeated SLPairModel dst = 2; // dst ts_id, dst on_id
}

message SLNitModelProto
{
    map<string, SLNitsTsModelProto>   actual = 1;
    map<string, SLNitsTsModelProto>   other = 2;
}
////////////////////////////////////////////////////////////////////////////////

////////////////////////////////////////////////////////////////////////////////
// EIT
message SLEitServiceModelProto
{
    map<uint32, uint32> services = 1; // src service_id, dst service_id
    //uint64              repetition = 2;
}

message SLEitModelProto
{
    SLTableStateProto                          state = 1;
    string                                        path = 2;
    uint64                                        max_bitrate = 3;

    uint64                                        actual_repetition = 4;
    uint64                                        other_repetition = 5;
    uint64                                        actual_schedule_repetition = 6;
    uint64                                        other_schedule_repetition = 7;

    map<string, SLEitServiceModelProto>       actual = 8;
    map<string, SLEitServiceModelProto>       other = 9;
    map<string, SLEitServiceModelProto>       actual_schedule = 10;
    map<string, SLEitServiceModelProto>       other_schedule = 11;
}
////////////////////////////////////////////////////////////////////////////////

////////////////////////////////////////////////////////////////////////////////
// TOT
message SLTotModelProto
{
    string  input = 1;
}
////////////////////////////////////////////////////////////////////////////////

////////////////////////////////////////////////////////////////////////////////
// TDT
message SLTdtModelProto
{
    string  input = 1;
}
////////////////////////////////////////////////////////////////////////////////

////////////////////////////////////////////////////////////////////////////////
// CAT
message SLCatModelProto
{
    string  input = 1;
}
////////////////////////////////////////////////////////////////////////////////

////////////////////////////////////////////////////////////////////////////////
// Other_pid
message SLOtherPidPidsProto
{
    map<uint32, uint32> src_dst = 1;
}

message SLOtherPidProto
{
    map<string, SLOtherPidPidsProto> input = 1;
}

message SLModelProto
{
    uint32 transport_stream_id = 1;
    uint32 original_network_id = 2;

    uint32 actual_network_id = 3;
    uint32 other_network_id = 4;

    uint32 other_transport_stream_id = 5;
    uint32 other_original_network_id = 6;

    uint64 bitrate = 7;

    SLPatModelProto pat = 8;
    SLCatModelProto cat = 9;
    SLTdtModelProto tdt = 10;
    SLTotModelProto tot = 11;
    SLSdtModelProto sdt = 12;
    SLNitModelProto nit = 13;
    SLEitModelProto eit = 14;
    SLOtherPidProto other_pid = 15;

    bool vbr = 16;
}
